# ProjectTatoosh

./: .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  LICENSE  Makefile  README.md  THIRD_PARTY_NOTICES.md  meson.build  meson_options.txt  setup.sh
.claude/skills/rmlui/: DATA_BINDING.md  SKILL.md
docs/: POST_PROCESS.md  RMLUI_INTEGRATION.md
rmlui/: ui_manager.cpp  ui_manager.h
rmlui/application/: document_manager.cpp  document_manager.h  menu_stack.cpp  menu_stack.h
rmlui/domain/: input_mode.h
rmlui/domain/ports/: command_executor.h  cvar_provider.h  logger.h
rmlui/infrastructure/: cvar_binding.h  game_data_model.cpp  game_data_model.h  menu_event_handler.cpp  menu_event_handler.h  quake_command_executor.cpp  quake_command_executor.h  quake_cvar_provider.h  quake_logger.cpp  quake_logger.h  stb_image_impl.c
rmlui/interface/: ui_manager.cpp  ui_manager.h
rmlui/internal/: cvar_binding.cpp  cvar_binding.h  game_data_model.cpp  game_data_model.h  menu_event_handler.cpp  menu_event_handler.h  notification_model.cpp  notification_model.h  quake_command_executor.h  quake_cvar_provider.cpp  quake_cvar_provider.h  render_interface_vk.cpp  render_interface_vk.h  system_interface.cpp  system_interface.h
rmlui/types/: cvar_schema.h  game_state.h  input_mode.h  notification_state.h
scripts/: compile-maps.sh  compile-qc.sh  setup-tools.sh
tatoosh/: config.cfg  progs.lno  quake.rc
tatoosh/qcsrc/: client.qc  defs.qc  progs.src  weapons.qc  world.qc
ui/rcss/: base.rcss  hud.rcss  main_menu.rcss  menu.rcss  widgets.rcss
ui/rml/: hud.rml
ui/rml/hud/: hud_classic.rml  hud_modern.rml  intermission.rml  scoreboard.rml
ui/rml/menus/: load_save.rml  main_menu.rml  multiplayer.rml  options_game.rml  options_graphics.rml  options_keys.rml  options_sound.rml  pause_menu.rml  player_setup.rml  singleplayer.rml
